# middleware/validator.js
@@ -4,7 +4,6 @@ const mongodb = require('../db/connect');
 
 const anniversaryValidationRules = () => {
   const rules = [
-    // couple validation rules
     body('couple')
       .isArray({ min: 2, max: 2 })
       .withMessage('couple must be an array of two individuals')
@@ -21,13 +20,35 @@ const anniversaryValidationRules = () => {
         }
         return true; // Validation passed
       }),
-    // anniversary date validation rules
     body('anniversaryDate')
       .notEmpty()
+      .withMessage('anniversary date is required')
       .isISO8601()
-      .withMessage('anniversary date is required and must be a valid date in the YYYY-MM-DD format')
+      .withMessage('anniversary date must be a valid and in the YYYY-MM-DD format')
   ];
+  return rules;
+};
 
+const newsValidationRules = () => {
+  const rules = [
+    body('newsTitle')
+      .notEmpty()
+      .withMessage('Title is required')
+      .isString()
+      .isLength({ max: 60 })
+      .withMessage('Title max length is 60'),
+    body('newsBody').notEmpty().isString().withMessage('News body is required'),
+    body('status')
+      .notEmpty()
+      .isIn(['public', 'private'])
+      .withMessage(`Status must be either 'public' or 'private'`),
+    body('postedBy')
+      .notEmpty()
+      .isMongoId()
+      .withMessage('postedBy is required and should be your individualId'),
+    body('dateCreated').notEmpty().withMessage('Date created is required'),
+    body('picture').isURL().withMessage('Provide a URL for the picture')
+  ];
   return rules;
 };
 
@@ -48,5 +69,6 @@ const validate = (req, res, next) => {
 
 module.exports = {
   anniversaryValidationRules,
+  newsValidationRules,
   validate
 };
