# routes/anniversaryRoutes.js
@@ -3,15 +3,6 @@ const router = express.Router();
 const anniversaryController = require('../controllers/anniversaryController');
 const { anniversaryValidationRules, validate } = require('../middleware/validator');
 
-// Get a list of all anniversaries
-router.get('/getanniversaries', anniversaryController.getAllAnniversaries);
-
-// Get a single Anniversary by Individual id
-router.get('/getanniversary/:individualId', anniversaryController.getAnniversaryByIndividual);
-
-// Get a single Anniversaries by Month
-router.get('/getanniversaries/:month', anniversaryController.getAnniversariesByMonth);
-
 // Create an Anniversary
 router.post(
   '/createanniversary',
@@ -19,6 +10,15 @@ router.post(
   validate,
   anniversaryController.createAnniversary
 );
+
+// Get a list of all anniversaries
+router.get('/getall', anniversaryController.getAllAnniversaries);
+
+// Get a single Anniversary by Individual id
+router.get('/:individualId', anniversaryController.getAnniversaryByIndividual);
+
+// Get a single Anniversaries by Month
+router.get('/:month', anniversaryController.getAnniversariesByMonth);
 
 // Update a single Anniversary by id
 router.put(
